--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "ecme",
+  "name": "gogetwell-clone",
   "private": true,
-  "version": "1.0.7",
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "prettier": "npx prettier src --check",
     "prettier:fix": "npm run prettier -- --write",
-    "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "npm run lint -- --fix",
     "format": "npm run prettier:fix && npm run lint:fix"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@floating-ui/react": "^0.26.23",
     "@fullcalendar/core": "^6.1.15",
     "@fullcalendar/daygrid": "^6.1.15",
@@ -22,6 +24,8 @@
     "@fullcalendar/timegrid": "^6.1.15",
     "@hello-pangea/dnd": "^16.6.0",
     "@hookform/resolvers": "^3.9.0",
+    "@mui/material": "^5.13.0",
+    "@react-three/fiber": "^8.12.0",
     "@tanstack/match-sorter-utils": "^8.19.4",
     "@tanstack/react-table": "^8.20.5",
     "@tanstack/react-virtual": "^3.10.7",
@@ -43,10 +47,10 @@
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "marked": "^14.1.2",
-    "react": "^18.3.1",
+    "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-csv": "^2.2.2",
-    "react-dom": "^18.3.1",
+    "react-dom": "^18.2.0",
     "react-highlight-words": "^0.20.0",
     "react-hook-form": "^7.53.0",
     "react-i18next": "^15.0.1",
@@ -64,19 +68,19 @@
     "simplebar-react": "^3.2.6",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.2",
+    "three": "^0.152.0",
     "yet-another-react-lightbox": "^3.21.4",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.15",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/d3-fetch": "^3.0.7",
     "@types/d3-scale": "^4.0.8",
     "@types/js-cookie": "^3.0.6",
-    "@types/node": "^22.5.4",
-    "@types/react": "^18.3.5",
+    "@types/react": "^18.2.15",
     "@types/react-csv": "^1.1.10",
-    "@types/react-dom": "^18.3.0",
+    "@types/react-dom": "^18.2.7",
     "@types/react-highlight-words": "^0.20.0",
     "@types/react-modal": "^3.16.3",
     "@types/react-portal": "^4.0.7",
@@ -85,24 +89,25 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "@typescript-eslint/eslint-plugin": "^8.5.0",
     "@typescript-eslint/parser": "^8.5.0",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.20",
     "color": "^4.2.3",
-    "eslint": "^8.55.0",
+    "eslint": "^8.45.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-import-resolver-typescript": "^3.6.3",
     "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-jsx-a11y": "^6.10.0",
-    "eslint-plugin-react": "^7.35.2",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.11",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "path": "^0.12.7",
     "postcss": "^8.4.45",
     "postcss-nesting": "^13.0.0",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.6.2",
-    "vite": "^5.4.3",
+    "vite": "^4.4.5",
     "vite-plugin-dynamic-import": "^1.5.0"
   }
 }
