--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "axios": "^1.7.7",
     "axios-mock-adapter": "^2.0.0",
     "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
     "d3-dsv": "^3.0.1",
     "d3-fetch": "^3.0.1",
     "d3-scale": "^4.0.2",
@@ -43,6 +44,7 @@
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "marked": "^14.1.2",
+    "motion": "^12.9.2",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-csv": "^2.2.2",
@@ -63,7 +65,7 @@
     "react-tooltip": "^5.28.0",
     "simplebar-react": "^3.2.6",
     "swr": "^2.2.5",
-    "tailwind-merge": "^2.5.2",
+    "tailwind-merge": "^2.6.0",
     "yet-another-react-lightbox": "^3.21.4",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
