--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "framer-motion": "^11.5.4",
     "gantt-task-react": "^0.3.9",
     "html-react-parser": "^5.1.15",
+    "i18next": "^25.0.2",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.503.0",
     "marked": "^14.1.2",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
@@ -55,7 +57,7 @@
     "react-modal": "^3.16.1",
     "react-number-format": "^5.4.2",
     "react-portal": "^4.2.2",
-    "react-router-dom": "^6.26.2",
+    "react-router-dom": "^6.30.0",
     "react-scroll": "^1.9.0",
     "react-select": "^5.8.0",
     "react-simple-maps": "4.0.0-beta.6",
